# NivlemHenHouse

./: .gitignore  CMakeLists.txt  README.md  input  main.cpp  makefile
BotsInfo/: CMakeLists.txt  main.cpp
HenHouse/: CMakeLists.txt  main.cpp
Nivlem/: main.cpp
include/: bot.h  chicken.h  client.h  externs.h  globals.h  graphics.h  main.h  mathfunc.h  nivlem.h  server.h  utils.h  workflow.h
src/: bot.cpp  chicken.cpp  client.cpp  graphics.cpp  mathfunc.cpp  nivlem.cpp  server.cpp  utils.cpp  workflow.cpp
utils/: graphics.cpp  graphics.h  utils.cpp  utils.h
xcb-proto-1.11/: Makefile  aclocal.m4  config.status  configure  xcb-proto.pc
xcb-proto-1.11/autom4te.cache/: output.1  requests  traces.0  traces.1
xcb-proto-1.11/src/: Makefile
xcb-proto-1.11/xcbgen/: Makefile
